[project]
authors = [{ name = "Thomas Adamcik", email = "thomas@adamcik.no" }]
license = { text = "AGLv3" }
requires-python = ">=3.12,<3.13"
dependencies = [
  "Django~=5.2.0",
  "brotli>=1.1.0",
  "django-compressor~=4.6.0",
  "lxml~=6.1.0",
  "psycopg2~=2.9.11",
  "python-memcached>=1.58,<1.60",
  "reportlab~=4.4.4",
  "sentry-sdk>=2.0.0,<3",
  "testing.postgresql~=1.3.0",
  "typing-extensions>=4.12.2",
  "vobject~=0.9.6.1",
]
name = "plan"
dynamic = ["version"]
readme = "README.md"
description = "Timetable generator for educational institutions."

[project.urls]
repository = "https://github.com/adamcik/plan"

[dependency-groups]
dev = ["django-debug-toolbar~=5.2.0", "django-stubs~=5.2.9"]
scraper = ["requests~=2.33.0", "tqdm", "urllib3>=1.26.0"]

[build-system]
requires = ["editables", "hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.djlint]
indent = 2
custom_blocks = "nonce,compress"
max_blank_lines = 1
max_line_length = 120

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
packages = ["plan"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["plan"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "django",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
