[project]
authors = [{ name = "Thomas Adamcik", email = "thomas@adamcik.no" }]
license = { text = "AGLv3" }
requires-python = ">=3.12,<3.13"
dependencies = [
  "Django~=5.2.0",
  "brotli==1.2.0",
  "django~=5.2.15",
  "django-debug-toolbar~=5.2.0",
  "lxml==6.1.0",
  "pillow==12.2.0",
  "psycopg2==2.9.11",
  "pydantic-parsed-env>=0.1.0a1,<1",
  "pydantic-settings>=2.14.2,<3",
  "pylibmc>=1.6.3,<2",
  "reportlab==4.4.10",
  "sentry-sdk>=2.0.0,<3",
  "typing-extensions>=4.12.2",
  "vobject>=0.9.9,<1",
]
name = "plan"
dynamic = ["version"]
readme = "README.md"
description = "Timetable generator for educational institutions."

[project.urls]
repository = "https://github.com/adamcik/plan"

[dependency-groups]
dev = [
  "django-stubs~=5.2.9",
  "ipython>=8.37.0,<9",
  "testing.postgresql~=1.3.0",
]
scraper = ["requests>=2.33.0,<3", "tqdm>=4.67.1,<5", "urllib3>=2.7.0,<3"]

[build-system]
requires = ["editables", "hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.basedpyright]
[[tool.basedpyright.executionEnvironments]]
root = "plan/settings"
reportConstantRedefinition = "none"

[tool.djlint]
indent = 2
custom_blocks = "nonce,compress"
max_blank_lines = 1
max_line_length = 120

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
packages = ["plan"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-local-folder = ["plan"]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "django",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
